rewrite++ publish job: install pandoc

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-24.04
     environment: github-pages
     steps:
+      - name: Install pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - uses: actions/checkout@v5
 
       - run: |
