CD: attempt to speed up “Install Deps” step

--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -8,10 +8,18 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - name: Cache apt packages
+        uses: actions/cache@v4
+        with:
+          path: /var/cache/apt/archives
+          key: ${{ runner.os }}-apt-
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
       - name: Install Deps
         run: |
           sudo apt-get update
-          sudo apt install pandoc weasyprint
+          sudo apt install -y --no-install-recommends pandoc weasyprint
 
       - name: Render HMTL + PDF
         run: |
