--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -21,7 +21,7 @@ jobs:
           sudo add-apt-repository -y ppa:apt-fast/stable
           sudo apt-get update
           sudo apt-get install -y apt-fast
-          sudo apt-fast install -y --no-install-recommends pandoc weasyprint
+          sudo apt-fast install -y --no-install-recommends fonts-charter pandoc weasyprint
 
       - name: Render HMTL + PDF
         run: |
