--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -16,12 +16,24 @@ jobs:
             ~/.cache/apt-fast
           key: ${{ runner.os }}-apt-fast-${{ hashFiles('/etc/apt/sources.list') }}
 
-      - name: Install apt-fast and packages
+      - name: Install tools
+        env:
+          DEBIAN_FRONTEND: noninteractive
         run: |
+          # exclude man pages and documentation
+          mkdir -p /etc/dpkg/dpkg.conf.d/
+          cat > /etc/dpkg/dpkg.conf.d/01_nodoc << 'EOF'
+          path-exclude /usr/share/man/*
+          path-exclude /usr/share/doc/*
+          EOF
+
+          # Enable (hopefully) fast installation
           sudo add-apt-repository -y ppa:apt-fast/stable
           sudo apt-get update
           sudo apt-get install -y apt-fast
-          sudo apt-fast install -y --no-install-recommends fonts-charter pandoc weasyprint
+
+          # Install our tools
+          sudo apt-fast install -y --no-install-recommends pandoc weasyprint
 
       - name: Render HMTL + PDF
         run: |
