--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -21,8 +21,8 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           # exclude man pages and documentation
-          mkdir -p /etc/dpkg/dpkg.conf.d/
-          cat > /etc/dpkg/dpkg.conf.d/01_nodoc << 'EOF'
+          sudo mkdir -p /etc/dpkg/dpkg.conf.d/
+          sudo cat > /etc/dpkg/dpkg.conf.d/01_nodoc << 'EOF'
           path-exclude /usr/share/man/*
           path-exclude /usr/share/doc/*
           EOF
